--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>The Wisconsin Experiment</title>
   </head>
   <body>
