--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <title>The Wisconsin Experiment</title>
+    <title>Illinois COVID-19 Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
